# theovib

./: ..gitignore.un~  .gitignore  .gitignore~  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
code/: int_coord.py  molecule.py  test.py
docs/: .buildinfo  .conf.py.un~  Makefile  conf.py  conf.py~  conf_2.py  example.ipynb  genindex.html  index.html  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/autoapi/: index.html
example/: example.py  input.txt  output.txt
example/h2o/: 00_A.com  00_A.extout  00_A.mgp  00_A.sum  00_A.sumviz  00_A.wfn  00_B.com  00_B.extout  00_B.mgp  00_B.sum  00_B.sumviz  10_A.com  10_A.extout  10_A.mgp  10_A.sum  10_A.sumviz  10_B.com  10_B.mgp  10_B.sumviz  10_C.com  10_C.extout  10_C.mgp  10_C.mgpviz  10_C.sum  10_C.wfn  10_D.extout  10_D.mgp  10_D.sum  10_D.wfn  11_A.com  11_A.extout  11_A.mgp  11_A.mgpviz  11_A.sum  11_A.wfn  11_B.com  11_B.extout  11_B.mgp  11_B.mgpviz  11_B.sumviz  (+854 more)
exemple/h2o/: 00_A.mgpviz  00_B.mgpviz  00_B.wfn  10_A.mgpviz  10_A.wfn  10_B.extout  10_B.mgpviz  10_B.sum  10_B.wfn  10_C.sumviz  10_D.com  10_D.mgpviz  10_D.sumviz  11_A.sumviz  11_B.sum  20_A.wfn  20_B.extout  20_B.mgpviz  20_C.com  20_C.wfn  20_D.mgpviz  20_D.wfn  21_A.extout  21_B.extout  21_B.sum  21_C.com  21_D.wfn  22_B.mgpviz  22_B.sumviz  30_A.extout  30_B.com  30_C.com  30_C.mgp  30_C.sumviz  30_D.com  30_D.mgp  30_D.sum  31_A.com  (+214 more)
src/: Gau-347629.inp  int_coord.py  molecule.gjf  molecule.py
tests/: molecule.gjf  test.py
(+1986 files in other folders)
