[tool.poetry]
name = "theovib"
version = "0.1.0"
description = "A package for molecular vibrations analysis"
authors = ["L. J. Duarte"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
